--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,4 +1,4 @@
-@import 'reset/variables' , 'reset/mixins' , 'reset/reset' ,'reset/keyframes';
+@import 'imports/_variables' , 'imports/_mixins' , 'imports/_reset' ,'imports/_keyframes';
 
 
 .acordeon{
